tests/errors/syn_class_var16.java
public class syn_class_var16 {
static int name ;
}